--- a/styles/section/_answer.scss
+++ b/styles/section/_answer.scss
@@ -49,4 +49,12 @@
 .accord:not(:last-child){
     margin-bottom: 40px
 }
+@media screen and (max-width:1180px){
+    .answer__container{
+        text-align: center;
 
+        &-description{
+            padding: 0 20px;
+        }
+    }
+}
