--- a/styles/section/_footer.scss
+++ b/styles/section/_footer.scss
@@ -15,3 +15,8 @@
         }
     }
 }
+@media screen and (max-width:1170px){
+    .footer__container{
+        justify-content: space-around;
+    }
+}
