--- a/styles/section/_years.scss
+++ b/styles/section/_years.scss
@@ -6,11 +6,13 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    gap: 50px;
     color: #000000;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
     top: 82%;
+    margin: 0 15px;
 
     &-item{
         display: flex;
