--- a/styles/section/_skyscraper.scss
+++ b/styles/section/_skyscraper.scss
@@ -9,6 +9,6 @@
         background-size: cover;
         max-width: 480px;
         width: 100%;
-        height: 407px;
+        min-height: 407px;
     }
 }
