--- a/styles/section/_years.scss
+++ b/styles/section/_years.scss
@@ -1,5 +1,5 @@
 .years__container{
-    padding: 57px 0 57px;
+    padding: 57px 30px 57px;
     background: #F7F7F7;
     max-width: 1100px;
     width: 100%; 
@@ -10,9 +10,8 @@
     color: #000000;
     position: absolute;
     left: 50%;
-    transform: translateX(-50%);
-    top: 82%;
-    margin: 0 15px;
+    transform: translate(-50%, 50%);
+    bottom: 0;
 
     &-item{
         display: flex;
