--- a/styles/section/_smart-projects.scss
+++ b/styles/section/_smart-projects.scss
@@ -19,6 +19,10 @@
         font: 500 48px Oswald;
         color: #FFFFFF;
         margin-bottom: 20px;
+
+        @media screen and (max-width:570px){
+           font-size: 38px;
+        }
     }
     &-description{
         font: 500 24px Oswald;
